server/oc/test/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-http
spec:
  hosts:
    - test
  location: MESH_EXTERNAL
  ports:
    - number: 8080
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: 192.168.1.183
      ports:
        http: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: test
  namespace: firstprj
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: test
subsets:
  - addresses:
      - ip: 192.168.1.183
    ports:
      - port: 8080
